# exarrow-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DISCLAIMER  LICENSE  NOTICE  README.md  deny.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  fetch-creds.sh  init-firewall.sh
.github/workflows/: ci.yml
benches/: .env.example  .gitignore  README.md
benches/python/: benchmark.py  benchmark_pyexasol.py  pyproject.toml
benches/rust/: benchmark.rs  benchmark_exarrow.rs  generate_data.rs
benches/scripts/: run_benchmarks.sh  setup_docker.sh
benches/shared/: schema.sql
docs/: connection.md  driver-manager.md  import-export.md  index.md  prepared-statements.md  queries.md  setup-and-connect.md  type-mapping.md
examples/: .env.example  README.md  basic_usage.rs  driver_manager_usage.rs  health_check.rs  import_export.rs  prepared_statements.rs  schema_inference.rs
examples/python/: requirements.txt  test_driver.py
scripts/: install_deps.sh  run_all_tests.sh  wait_for_exasol.sh
specs/: .gitignore  decision-log.md  mission.md
specs/_plans/add-csv-inference/import-export/auto-table-creation/: spec.md
specs/_plans/add-native-protocol/: findings.md  plan.md  tasks.md  verification-report.md
specs/_plans/add-native-protocol/connection-management/auth-and-security/: spec.md
specs/_plans/add-native-protocol/connection-management/transport-selection/: spec.md
specs/_plans/add-native-protocol/native-client/encryption/: spec.md
specs/_plans/add-native-protocol/native-client/protocol/: spec.md
specs/_plans/add-native-protocol/native-client/result-sets/: spec.md
specs/_plans/add-security-advisory-policy/: decision-log.md  plan.md  tasks.md  verification-report.md
specs/_plans/add-security-advisory-policy/code-quality/dependencies/: spec.md
specs/_plans/is-there-a-way-adaptive-thacker/: plan.md  tasks.md  verification-report.md
specs/_recorded/2026-02-17-add-csv-inference/: plan.md  verification-report.md
specs/_recorded/2026-02-23-fix-parquet-import-ddl-error-handling/: plan.md  tasks.md  verification-report.md
specs/_recorded/2026-02-23-fix-parquet-import-ddl-error-handling/import-export/auto-table-creation/: spec.md
specs/adbc-driver/: spec.md
specs/adbc-driver/bulk-ingestion/: spec.md
specs/adbc-driver/driver-interface/: spec.md
specs/adbc-driver/get-objects/: spec.md
specs/adbc-driver/get-parameter-schema/: spec.md
specs/adbc-driver/statement-and-results/: spec.md
specs/adbc-driver/transactions/: spec.md
specs/arrow-conversion/optimization/: spec.md
specs/arrow-conversion/recordbatch-assembly/: spec.md
specs/arrow-conversion/type-converters/: spec.md
specs/code-quality/core/: spec.md
specs/code-quality/dependencies/: spec.md
specs/connection-management/auth-and-security/: spec.md
specs/connection-management/native-auth/: spec.md
specs/connection-management/session-and-lifecycle/: spec.md
specs/import-export/: spec.md
specs/import-export/arrow-recordbatch/: spec.md
specs/import-export/auto-table-creation/: spec.md
specs/import-export/csv-export/: spec.md
specs/import-export/csv-import/: spec.md
specs/import-export/http-transport/: spec.md
specs/import-export/parallel-import/: spec.md
specs/import-export/parquet-io/: spec.md
specs/import-export/session-integration/: spec.md
specs/integration-testing/: spec.md
specs/native-client/encryption/: spec.md
specs/native-client/result-sets/: spec.md
specs/prepared-statements/batch-execution/: spec.md
specs/prepared-statements/binding-and-execution/: spec.md
specs/prepared-statements/lifecycle-and-validation/: spec.md
specs/query-execution/execution/: spec.md
specs/query-execution/results-and-transactions/: spec.md
specs/type-mapping/: spec.md
specs/type-mapping/arrow-to-exasol/: spec.md
specs/type-mapping/boundaries-and-validation/: spec.md
specs/type-mapping/exasol-to-arrow/: spec.md
specs/websocket-client/async-lifecycle/: spec.md
specs/websocket-client/protocol/: spec.md
src/: adbc_ffi.rs  error.rs  lib.rs
src/adbc/: connection.rs  database.rs  driver.rs  mod.rs  statement.rs
src/arrow_conversion/: builders.rs  converter.rs  mod.rs
src/connection/: auth.rs  mod.rs  params.rs  session.rs
src/export/: arrow.rs  csv.rs  mod.rs  parquet.rs
src/import/: arrow.rs  csv.rs  mod.rs  parallel.rs  parquet.rs  source.rs
src/query/: export.rs  import.rs  mod.rs  prepared.rs  results.rs  statement.rs
src/transport/: deserialize.rs  http_transport.rs  messages.rs  mod.rs  protocol.rs  tls.rs  websocket.rs
src/transport/native/: constants.rs  handshake.rs  mod.rs
src/types/: conversion.rs  csv_infer.rs  infer.rs  mapping.rs  mod.rs  schema.rs
tests/: driver_manager_tests.rs  import_export_tests.rs  integration_tests.rs  native_protocol_tests.rs
tests/common/: mod.rs
tests/python/: test_driver_integration.py
