[package]
name = "exarrow-rs"
version = "2.1.1"
edition = "2021"
authors = ["Marco Naetlitz"]
license = "MIT"
description = "ADBC-compatible driver for Exasol with Arrow data format support"
repository = "https://github.com/marconae/exarrow-rs"
keywords = ["exasol", "adbc", "arrow", "database", "driver"]
categories = ["database"]

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
# Apache Arrow support (arrow re-exports arrow-array, arrow-schema, etc.)
arrow = "57.1.0"

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs"] }

# WebSocket client
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# TLS support
native-tls = "0.2"

# Async utilities
futures-util = "0.3"
async-trait = "0.1"

# URL encoding/decoding
urlencoding = "2.1"

# Hex encoding for binary data
hex = "0.4"

# RSA encryption for Exasol authentication
rsa = "0.9"
base64 = "0.22"
# Use rand_core 0.6 for compatibility with rsa crate's CryptoRng trait
rand_core = { version = "0.6", features = ["getrandom"] }

# ADBC core traits (optional, for FFI export)
adbc_core = { version = "0.21.0", optional = true }
adbc_ffi = { version = "0.21.0", optional = true }

# HTTP transport for import/export (hyper with HTTP server support)
hyper = { version = "1.6", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }

# TLS certificate generation for secure import/export
rcgen = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"

# Parquet file support
parquet = { version = "57.1.0", features = ["async"] }

# Compression support for CSV import/export
flate2 = "1.1"
bzip2 = "0.5"

# SHA-256 fingerprint for TLS certificates
sha2 = "0.10"

# Date/time formatting for import/export
chrono = "0.4"

# Byte buffer utilities
bytes = "1.10"

[dev-dependencies]
# Mocking for tests
mockall = "0.14.0"
# ADBC driver manager and core for integration testing
adbc_driver_manager = "0.21"
adbc_core = "0.21"
tempfile = "3.24.0"
# Environment variable loading for examples
dotenvy = "0.15"

[features]
default = []
ffi = ["dep:adbc_core", "dep:adbc_ffi"]
